# trade_xv2

./: .dockerignore  .env.example  .env.local  .gitattributes  .gitignore  .import-linter.ini  .mcp.json  .pre-commit-config.yaml  .qodercli.json  .run_test.sh  06-execution-engine.md  ARCHITECTURAL_AUDIT.md  ARCHITECTURAL_AUDIT_PHASES_3-5.md  ARCHITECTURE.md  ARCHITECTURE_REMEDIATION_COMPLETE.md  ARCHITECTURE_V2.md  ARCHITECTURE_V3.md  BACKEND_API_SPEC.md  BROKERS_END_TO_END_AUDIT_2026_06_30.md  BROKERS_IMPROVEMENT_PLAN.md  BROKERS_REFACTORING_EXECUTIVE_SUMMARY.md  BROKERS_REFACTORING_IMPLEMENTATION.md  BROKERS_REFACTORING_REPORT.md  BROKER_CERTIFICATION_REPORT.md  BROKER_GATEWAY_ENDPOINT_ANALYSIS.md  BROKER_PARITY_ANALYSIS.md  BROKER_TEST_PYRAMID_ANALYSIS.md  CHANGELOG.md  CHANGELOG_V2.1.md  CLAUDE.md  CLI_SPEED_REPORT.md  COMPLETION_PLAN.md  COMPLEXITY_AUDIT.md  CONCURRENCY_ROADMAP.md  CONTRIBUTING.md  DATA_QUALITY_REPORT.md  DHAN_CERTIFICATION_REPORT.md  DHAN_VS_UPSTOX_COVERAGE.md  DOCTOR_REFACTORING.md  Dockerfile  (+81 more)
v2/: ARCHITECTURAL-AUDIT.md  Dockerfile  IMPLEMENTATION-PLAN.md  Makefile  README.md  pyproject.toml
v2/.github/workflows/: ci.yml
v2/.hermes/plans/: 2026-07-24_gateway-token-master-hardening.md
v2/config/: tradex.yaml
v2/config/profiles/: backtest.yaml  live.yaml  paper.yaml  replay.yaml
v2/docs/: broker-architecture.dot  broker-classes.dot  broker-flows.summary.md  broker-layers.dot  broker-order-flow.dot  zero-parity-plan.md
v2/src/application/: __init__.py
v2/src/application/analytics/: __init__.py  engines.py  feature_pipeline.py
v2/src/application/execution/: __init__.py  execution_engine.py  fill_sources.py  order_store.py  protocols.py
v2/src/application/oms/: __init__.py  order_manager.py  position_manager.py  trading_cache.py  trading_context.py
v2/src/application/reconciliation/: __init__.py  engine.py
v2/src/application/risk/: __init__.py  context.py  risk_manager.py  rules.py
v2/src/application/strategy/: __init__.py  buy_and_hold.py  strategy_engine.py
v2/src/config/: __init__.py  loader.py  schema.py
v2/src/datalake/: __init__.py  catalog.py  corporate_actions.py  mcp_server.py  quality.py  source_selection.py
v2/src/domain/: __init__.py  enums.py  messages.py  symbols.py
v2/src/domain/capabilities/: __init__.py  broker_capabilities.py
v2/src/domain/commands/: __init__.py
v2/src/domain/entities/: __init__.py
v2/src/domain/events/: __init__.py
v2/src/domain/policies/: __init__.py  routing.py  source_selection.py
v2/src/domain/ports/: __init__.py  broker_adapter.py  clock.py  data_adapter.py  event_bus.py  fill_source.py  idempotency_guard.py  portfolio_model.py  risk_model.py  strategy.py  types.py
v2/src/domain/services/: __init__.py  fee_calculator.py  instrument_registry.py  pricing.py
v2/src/domain/value_objects/: __init__.py
v2/src/infrastructure/: clock.py
v2/src/infrastructure/component/: __init__.py  base.py  lifecycle.py
v2/src/infrastructure/idempotency/: __init__.py  guard.py
v2/src/infrastructure/message_bus/: __init__.py  bus.py  log.py  message_log.py  router.py
v2/src/infrastructure/observability/: __init__.py  audit.py  health.py  metrics.py
v2/src/interface/: __init__.py  cli.py
v2/src/interface/api/: app.py  health.py
v2/src/interface/mcp/: server.py
v2/src/interface/tui/: app.py
v2/src/plugins/: __init__.py
v2/src/plugins/brokers/: __init__.py  registry.py
v2/src/plugins/exchanges/: __init__.py
v2/src/runtime/: __init__.py  broker_factory.py  discovery.py  execution_target.py  factory.py  runtime.py  startup.py
v2/src/shared/: __init__.py  env.py  errors.py
v2/src/shared/logging/: __init__.py  setup.py
v2/src/tradex/: __init__.py  check_connection.py  cli.py  node.py
v2/tests/: conftest.py
v2/tests/architecture/: test_god_class_size.py  test_import_contract.py  test_import_rules.py  test_no_broker_imports.py  test_no_bypass_order_path.py
v2/tests/component/: test_backtest_engine.py  test_bus_with_component.py  test_execution_engine.py  test_execution_target.py  test_feature_pipeline.py  test_live_broker_boot.py  test_message_log_replay.py  test_order_manager.py  test_position_manager.py  test_replay_engine.py  test_runtime_factory.py  test_startup.py  test_strategy_engine.py  test_trading_cache.py  test_trading_node.py
v2/tests/contracts/: test_fill_source.py  test_order_store.py
v2/tests/e2e/: test_paper_session.py
v2/tests/integration/: adapter_harness.py  test_datalake.py  test_dhan_adapter_harness.py  test_e2e_flow.py  test_live_smoke.py  test_paper_adapter_harness.py  test_upstox_adapter_harness.py
v2/tests/parity/: test_backtest_replay_parity.py  test_four_mode_parity.py
v2/tests/property/: test_position_pnl.py
v2/tests/unit/analytics/: test_analytics_suite.py
v2/tests/unit/application/: test_broker_fill_source.py  test_execution.py  test_oms.py  test_reconciliation.py  test_risk.py  test_risk_manager.py  test_risk_rules.py  test_strategy.py
v2/tests/unit/config/: test_loader.py  test_schema.py
v2/tests/unit/datalake/: test_corporate_actions.py  test_mcp.py  test_quality.py  test_source_selection.py
v2/tests/unit/domain/: test_broker_protocol.py  test_commands.py  test_entities.py  test_enums.py  test_events.py  test_fee_calculator.py  test_instrument_id.py  test_messages.py  test_order_fsm.py  test_order_fsm_property.py  test_policies.py  test_ports.py  test_product_type.py  test_services.py  test_value_objects.py
v2/tests/unit/infrastructure/: test_audit.py  test_clock.py  test_component_lifecycle.py  test_health.py  test_idempotency.py  test_lifecycle_manager.py  test_message_bus.py  test_metrics.py  test_observability.py
v2/tests/unit/interface/: test_cli.py  test_health_api.py  test_interface.py  test_tui.py
v2/tests/unit/plugins/: test_broker_common.py  test_broker_parity.py  test_capabilities.py  test_circuit_breaker.py  test_constants.py  test_dhan_broker.py  test_dhan_instrument_mapping.py  test_instruments.py  test_nse_calendar.py  test_quote_normalize.py  test_registry.py  test_retry.py  test_symbol_resolver.py  (+4 more)
(+7630 files in other folders)
