[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradexv2"
version = "0.1.0"
description = "Python-based, broker-agnostic algorithmic trading framework for Indian exchanges"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pydantic>=2.5",
    "rich>=13.0",
    "textual>=0.40",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "dhanhq>=2.0",
    "pyotp>=2.9",
    "PyJWT>=2.8",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "opentelemetry-exporter-otlp>=1.22",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-requests>=0.43b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "bandit>=1.7",
    "pip-audit>=2.6",
    "import-linter>=2.0",
    "hypothesis>=6.100",
]

[project.entry-points."tradex.brokers"]
# Module-only targets (no ":ClassName" suffix) deliberately -- each broker
# package already self-registers via register_broker_plugin() etc. at
# import time (brokers/{dhan,upstox,paper}/__init__.py), so the entry
# point's job is just "import this module," not "load this specific
# class." The originally-drafted values here (brokers.dhan:DhanBroker,
# brokers.paper:PaperBroker) referenced classes that were never built --
# only brokers.upstox.broker.UpstoxBroker exists. Corrected to real,
# existing targets. See runtime/broker_discovery.py for the composition-
# root code that consumes this group via importlib.metadata.entry_points().
dhan = "brokers.dhan"
upstox = "brokers.upstox"
paper = "brokers.paper"

# Single-root packaging: all library code lives under src/.
# Layout (Clean Architecture):
#   src/domain, application, infrastructure, brokers,
#   interface/{api,ui}, analytics, datalake, config, runtime, tradex
# Run/tests: PYTHONPATH=src  (or editable install: pip install -e .)
# Note: `runtime` is the composition root package (wires application layers);
# it contains only Python source — artefacts (locks, logs, tokens) live in
# the repo-root runtime/ directory which is NOT distributed.
[tool.setuptools.packages.find]
where = ["src"]
include = [
    "domain*",
    "application*",
    "infrastructure*",
    "brokers*",
    "interface*",
    "config*",
    "datalake*",
    "analytics*",
    "tradex*",
    "runtime*",
]
exclude = [
    "tests*",
    "*.tests*",
    "venv*",
    "docs*",
    "scripts*",
    "examples*",
    "graphify*",
    "market_data*",
    "analytics_cache*",
    "runtime-dev*",
]

# ─── pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
# Library packages resolve from src/; repo root is needed for the `tests` package.
pythonpath = ["src", "."]
testpaths = [
    "tests",
    "src/brokers",
    "src/analytics",
    "src/interface/ui/tests",
    "src/datalake",
    "src/application",
    "src/domain",
]
markers = [
    "unit: module-owned unit tests",
    "contract: broker/module contract tests",
    "dhan: DhanHQ integration tests",
    "integration: tests that call external broker APIs",
    "sandbox: sandbox tests that may place and cancel orders",
    "live_readonly: live tests that must only read from real endpoints",
    "performance: latency and throughput benchmarks",
    "upstox: Upstox-specific unit tests",
    "upstox_integration: Upstox integration tests (gated by UPSTOX_INTEGRATION=1)",
    "upstox_sandbox: sandbox tests that may place and cancel orders",
    "upstox_live_readonly: live tests that must only read from real endpoints",
    "upstox_sdk_compat: SDK compatibility tests",
    "stress: long-running concurrency stress tests",
    "pre_prod: tests required on pre-prod gate (run only when PRE_PROD_GATE=1)",
    "regression: part of the Dhan regression suite; run with -m regression",
    "off_market_safe: live-readonly REST tests; safe to run outside NSE trading hours",
    "market_hours: WebSocket/streaming tests; require NSE 09:15-15:30 IST or FORCE_MARKET_OPEN=1",
    "auth_integration: live TOTP bootstrap and WebSocket reconnect regression (auto-skips without creds)",
    "cli_endpoint: offline subprocess smoke for a registered CLI endpoint",
    "cli_endpoint_live: live_readonly subprocess smoke — requires .env.local Dhan creds",
    "cli_endpoint_sandbox: sandbox order placement — requires DHAN_INTEGRATION=1",
    "paper_replay_parity: Paper trading ↔ Replay engine parity",
    "cross_broker_parity: Cross-broker data source parity",
    "live_backtest_parity: Live ↔ Backtest execution parity",
    "scanner_determinism: Scanner output determinism",
    "feature_parity: Feature computation parity across runs",
    "oms_integration: OMS and broker gateway integration tests",
    "memory: Memory profiling and leak detection tests",
    "e2e: End-to-end trading flow tests",
    "slow: tests that take longer than 1 second to execute",
    "live_orders: guarded real order placement (requires TRADEX_LIVE_ORDERS=1)",
    "property: property-based tests (hypothesis)",
    "component: component tests with mocked/doubled collaborators",
    "mutation: mutation testing (tests verify behavior, not implementation)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-markers --tb=short --durations=10"

# Parity enforcement - register custom pytest plugin
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ─── coverage ─────────────────────────────────────────────
[tool.coverage.run]
source = [
    "brokers",
    "analytics",
    "interface",
    "datalake",
    "application",
    "domain",
    "infrastructure",
    "runtime",
    "tradex",
    "config",
]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
show_missing = true

# Mutation testing configuration (mutmut)
[tool.mutmut]
paths_to_mutate = "brokers,analytics,datalake,domain,application,infrastructure"
mutation_operators = [
    "uop",
    "aod",
    "aor",
    "cos",
]
test_runner = "pytest tests/ -x -q"
timeout = 300  # 5 minutes per mutation
fail_under = 90  # 90% mutant kill rate required

# ─── mypy ─────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
exclude = [
    "tests/",
    "scripts/",
    "build/",
    "dist/",
    "src/interface/ui/diagnostics/",
]

[[tool.mypy.overrides]]
module = ["dhanhq.*", "textual.*", "rich.*", "upstox_client.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true

# ─── ruff ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".cache", "runtime", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "G",   # flake8-logging-format
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # function-call-in-default-argument (common in FastAPI/Django)
    "S101",  # assert (we use asserts in tests)
    "S104",  # hardcoded-bind-all-interfaces (we control the env)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B011", "TID251"]
"conftest.py" = ["S", "TID251"]
"scripts/**/*.py" = ["S", "E", "F", "TID251"]
"src/**/tests/**/*.py" = ["S", "TID251"]
"src/interface/ui/**/*.py" = ["TID251"]
"src/brokers/dhan/**/*.py" = ["TID251"]
"src/brokers/upstox/**/*.py" = ["TID251"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ─── Coding Standards ─────────────────────────────────────
# These rules enforce architectural invariants and team conventions.
# Layer boundary contracts live inline in [tool.importlinter] below.

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Domain types must come from domain, not broker-specific packages
"brokers.dhan.domain.Quote" = {msg = "Import Quote from domain, not from brokers.dhan.domain"}
"brokers.dhan.domain.Balance" = {msg = "Import Balance from domain, not from brokers.dhan.domain"}
"brokers.dhan.domain.DepthLevel" = {msg = "Import DepthLevel from domain, not from brokers.dhan.domain"}
"brokers.dhan.domain.MarketDepth" = {msg = "Import MarketDepth from domain, not from brokers.dhan.domain"}
# Lower layers cannot import from the UI/CLI presentation package
"interface.ui" = {msg = "Lower layers (datalake, analytics, brokers) cannot import from interface.ui. Use entry points or events instead."}
"interface.api" = {msg = "Lower layers cannot import from interface.api. Use application ports or composition roots."}
# Cross-broker imports are forbidden
"brokers.dhan" = {msg = "Cannot import from brokers.dhan in brokers.common or other broker packages"}
"brokers.upstox" = {msg = "Cannot import from brokers.upstox in brokers.common or other broker packages"}

# ─── Import Linter Contracts ──────────────────────────────
# Enforce architectural layer boundaries (REF-012).
# Single package root under src/:
#   PYTHONPATH="$(pwd)/src" lint-imports --config pyproject.toml
# CI pins PYTHONPATH the same way (.github/workflows/ci.yml).

[tool.importlinter]
root_packages = [
    "domain",
    "brokers",
    "analytics",
    "datalake",
    "interface",
    "application",
    "infrastructure",
    "tradex",
    "runtime",
    "config",
]

[[tool.importlinter.contracts]]
name = "Domain independence"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = [
    "infrastructure",
    "brokers",
    "analytics",
    "datalake",
    "interface",
    "application",
    "tradex",
    "runtime",
    "config",
]

[[tool.importlinter.contracts]]
name = "Infrastructure independence"
type = "forbidden"
source_modules = ["infrastructure"]
forbidden_modules = ["brokers", "analytics", "interface", "application"]
# Layout moves leave some ignores unused; warn instead of aborting the suite.
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Tests legitimately import application/tradex for integration testing.
    "infrastructure.tests.test_audit -> application.audit",
    "infrastructure.tests.test_session_recorder -> tradex.session",
    # Gateway factory is a composition root — it constructs broker gateways.
    "infrastructure.gateway.factory -> brokers.paper",
    # Gateway factory imports datalake (datalake.gateway re-exports broker capabilities).
    "infrastructure.gateway.factory -> datalake.gateway",
    # Thin re-export shim: composition root lives in runtime/ (may wire application).
    "infrastructure.broker_infrastructure -> runtime.broker_infrastructure",
    # Note: infrastructure.session.infra was removed; runtime.session_infra is the home.
]

[[tool.importlinter.contracts]]
name = "Analytics broker-adapter isolation"
type = "forbidden"
source_modules = ["analytics"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper"]

[[tool.importlinter.contracts]]
# Blueprint Part 1 §5.1 D2: Trading must be usable (and testable) with zero
# strategies/scanners loaded — a scanner bug must never be able to affect
# order state. application.oms + application.execution are the concrete
# Trading-context modules today (see
# docs/architecture/trading-os/TRADING_OS_BLUEPRINT_V2.md Part 1 §4/§5).
# Risk lives in application.oms (no separate risk package).
# application.trading → analytics is allowed (orchestrator).
name = "Trading does not import Analytics (D2)"
type = "forbidden"
source_modules = ["application.oms", "application.execution"]
forbidden_modules = ["analytics"]

[[tool.importlinter.contracts]]
# D2 inverse: strategies/scanners must not reach into OMS/execution.
name = "Analytics does not import Trading OMS/execution (D2 inverse)"
type = "forbidden"
source_modules = ["analytics"]
forbidden_modules = ["application.oms", "application.execution"]

[[tool.importlinter.contracts]]
name = "Broker common isolation"
type = "forbidden"
source_modules = ["brokers.common"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper", "analytics"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Test: integration tests legitimately import concrete broker implementations.
    # Bare package + ** for nested modules (e.g. brokers.dhan.config.capabilities).
    "brokers.common.tests.* -> brokers.dhan.**",
    "brokers.common.tests.* -> brokers.upstox",
    "brokers.common.tests.* -> brokers.upstox.**",
    "brokers.common.tests.* -> brokers.paper",
    "brokers.common.tests.* -> brokers.paper.**",
]

[[tool.importlinter.contracts]]
name = "Application broker isolation"
type = "forbidden"
source_modules = ["application"]
# brokers.common is a residual facade — application must use domain.capabilities
# (and domain.ports). Concrete brokers remain forbidden outside tests.
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper", "brokers.common"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Test-only: integration tests import concrete broker / residual common modules.
    "application.oms.tests.* -> brokers.common.**",
    "application.oms.tests.* -> brokers.dhan.**",
    "application.execution.tests.* -> brokers.paper.**",
    "application.trading.tests.* -> brokers.paper.**",
]

[[tool.importlinter.contracts]]
name = "Analytics does not import interface presentation"
type = "forbidden"
source_modules = ["analytics"]
forbidden_modules = ["interface.ui", "interface.api"]
# Known residual: replay engine wires UI compose (lazy import) — fix under REF-6.
# grimp often does not see function-local imports; warn if ignore goes unused.
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    "analytics.replay.engine -> interface.ui.services.compose",
]

# Known residual (NOT enforced yet): runtime.trading_runtime_factory lazily imports
# interface.ui.services.broker_service. Do not add "runtime ↛ interface" until that
# edge is removed (prefer composition-root injection). See REF-6 notes.

[[tool.importlinter.contracts]]
name = "Application infrastructure separation"
type = "forbidden"
source_modules = ["application"]
forbidden_modules = ["infrastructure"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Composer imports cross-cutting infrastructure directly (audit, time).
    "application.composer.router -> infrastructure.observability.audit",
    "application.composer.router -> infrastructure.time.clock",
    "application.composer.gap_reconciler -> infrastructure.time.clock",
    # Services import infrastructure IO directly (parquet storage).
    "application.services.download_engine -> infrastructure.io.parquet",
    "application.services.historical_data -> infrastructure.io.parquet",
    # Production readiness inspects hardened TLS sessions.
    "application.services.production_readiness -> infrastructure.security.ssl_hardening",
    # Audit / clock edges under application.data|streaming|scheduling (namespace
    # packages without __init__.py) are invisible to grimp; if those packages gain
    # __init__.py, re-add precise ignores for:
    #   application.data.provenance -> infrastructure.time.clock
    #   application.data.historical_coordinator -> infrastructure.observability.audit
    #   application.streaming.orchestrator -> infrastructure.observability.audit
    #   application.scheduling.quota_scheduler -> infrastructure.observability.audit
    # Test-only: integration tests legitimately import infrastructure.
    "application.oms.tests.* -> infrastructure.**",
    # Test-only: break transitive application→infrastructure via broker facades
    # (ignore_imports is edge-based, not path-based).
    "application.oms.tests.* -> brokers.dhan.**",
    "application.oms.tests.* -> brokers.common.**",
]

[[tool.importlinter.contracts]]
name = "CLI broker-implementation isolation"
type = "forbidden"
source_modules = ["interface.ui"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper"]
# Composition-root edges are listed explicitly; unused ignore lines should not
# abort the whole contract suite after layout moves.
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Composition root: CLI broker façade/registry wire concrete adapters.
    "interface.ui.services.broker_facade -> brokers.dhan.identity.account_registry",
    "interface.ui.services.broker_facade -> brokers.dhan.gateway",
    "interface.ui.services.broker_facade -> brokers.dhan.loader",
    "interface.ui.services.broker_facade -> brokers.dhan.reconciliation",
    "interface.ui.services.broker_facade -> brokers.dhan.symbol_validator",
    "interface.ui.services.broker_facade -> brokers.paper.paper_gateway",
    "interface.ui.services.broker_facade -> brokers.upstox.mappers.domain_mapper",
    "interface.ui.services.broker_registry -> brokers.paper",
    "interface.ui.services.broker_registry -> brokers.dhan.websocket",
    "interface.ui.services.broker_registry -> brokers.dhan.reconciliation",
    "interface.ui.services.broker_registry -> infrastructure.gateway.factory",
]

[[tool.importlinter.contracts]]
name = "API broker-implementation isolation"
type = "forbidden"
source_modules = ["interface.api"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper"]
ignore_imports = [
    # API orders go through tradex.session (composition root).
    "interface.api.routers.orders -> tradex",
]

[[tool.importlinter.contracts]]
name = "Tradex public API broker isolation"
type = "forbidden"
source_modules = ["tradex"]
forbidden_modules = ["brokers.dhan", "brokers.upstox"]
ignore_imports = [
    # Session factory may construct paper gateway for the public SDK.
    "tradex.session -> brokers.paper",
    "tradex.session -> brokers.paper.data_provider",
    # Public SDK session factory needs broker-specific constructors.
    "tradex.session -> brokers.dhan",
    "tradex.session -> brokers.upstox",
]